--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -18,6 +18,43 @@
   /* background: transparent; */
 }
 
+#dashboard-statistics-card-container-div {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-self: flex-start;
+}
+
+.dashboard-statistic-card {
+  background: var(--dashboard-widget-background-color);
+  
+  color: var(--font-color-primary);
+  border: 0;
+  flex-basis: 25%;
+  min-width: 230px;
+  border-radius: 0.5em;
+}
+
+.dashboard-statistic-card .ant-card-body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+}
+.dashboard-statistic-metric-details-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  font-family: "Muli";
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-left: 0.5em;
+  color: var(--font-color-primary);
+}
 .dashboard-menu {
   /* background-color: palevioletred; */
   display: flex;
@@ -73,6 +110,7 @@
   font-weight: bold;
   font-size: 2.39rem;
   flex-grow: 10 !important;
+  color: var(--font-color-primary);
 }
 
 .dashboard-col {
@@ -89,6 +127,7 @@
 .welcome-back-text {
   font-family: "Muli";
   font-size: 0.9375rem;
+  color: var(--font-color-primary);
 }
 
 .icon {
