--- a/src/Components/Common/CSS/Common.css
+++ b/src/Components/Common/CSS/Common.css
@@ -1,6 +1,4 @@
 :root {
-  --ff-primary: "Mulish";
-
   /* Theme Blue Gradient */
   /* --font-color-primary: white;
   --font-color-secondary: white;
@@ -98,6 +96,85 @@
     rgba(0, 0, 0, 0.1)
   ); */
 
+  --ff-primary: "Gotham";
+  --header-font-weight: 300;
+  --t3-font-weight: 500;
+  --button-font-weight: 700;
+  --primary-green: #1ed760;
+
+  --font-color-hover-green: #1ed760;
+
+  --font-color-primary: rgb(230, 230, 230);
+  --font-color-secondary: rgb(5, 0, 54);
+  --background-color: #263238;
+
+  --navbar-popover-color: #263238;
+  /* --navbar-background-color: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.4)
+  ); */
+
+  --navbar-background-color: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0.07),
+    rgba(255, 255, 255, 0.1)
+  );
+
+  --notifications-background-color: #263238;
+
+  --navbar-avatar-color: var(--ff-primary);
+  --navbar-avatar-color-in-data: var(--ff-primary);
+
+  --footer-background-color: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.4)
+  );
+
+  --sider-background-color: #263238;
+  --sider-menu-background-color: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0.07),
+    rgba(255, 255, 255, 0.1)
+  );
+
+  --drawer-background-color: #263238;
+
+  --visitor-details-text-color: var(--font-color-primary);
+  --visitor-details-font-weight: 400;
+  --form-background-color: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0.07),
+    rgba(255, 255, 255, 0.1)
+  );
+  --form-label-font-size: 0.875rem;
+  --content-background-color: #263238;
+
+  --data-background-color: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0.07),
+    rgba(255, 255, 255, 0.1)
+  );
+
+  --profile-form-background-color: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0.07),
+    rgba(255, 255, 255, 0.1)
+  );
+  --profile-content-container-background-color: #263238;
+  --users-card-color: linear-gradient(
+    to left,
+    rgba(255, 255, 255, 0.07),
+    rgba(255, 255, 255, 0.1)
+  );
+
+  --dashboard-widget-background-color: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0.281),
+    rgba(0, 0, 0, 0.185)
+  );
+
   /* Theme Green */
   /*     
   --font-color-primary: white;
@@ -127,7 +204,7 @@
     rgba(0, 0, 0, 0.1)
   ); */
 
-  /*   
+  /*     
   --background-color: linear-gradient(
     to right top,
     hsl(157, 100%, 45%),
@@ -157,7 +234,7 @@
   ); */
 
   /* Dark Theme */
-  --background-color-secondary: '#00cc7e';
+  /* --background-color-secondary: '#00cc7e';
   --font-color-primary: white;
   --font-color-secondary: white;
   --background-color: linear-gradient(
@@ -188,7 +265,7 @@
     to right,
     rgba(255, 255, 255, 0.1),
     rgb(0, 112, 204, 0.05)
-  );
+  ); */
 }
 
 html {
@@ -210,7 +287,7 @@ body,
 }
 
 .common-primary-button-style {
-  font-family: "Mulish";
+  font-family: var(--ff-primary);
   /* font-size: clamp(0.75rem, 0.9375vw, 1.125rem) !important; */
   font-size: 1.125rem !important;
   font-weight: bold !important;
@@ -227,7 +304,7 @@ body,
   font-family: var(--ff-primary);
   font-weight: bold;
   /* font-size: clamp(0.75rem, 1vw, 1.125rem) !important; */
-  font-size: 1.125rem !important;
+  font-size: 0.875 !important;
 }
 @media only screen and (max-width: 1100px) {
   .common-workarea {
