--- a/src/Components/Signin/Signin.css
+++ b/src/Components/Signin/Signin.css
@@ -7,8 +7,7 @@
   grid-template-rows: auto 1fr auto;
   /* background: linear-gradient(to right top, #65dfc9, #6cdbeb); */
   background: var(--background-color);
-  overflow: scroll
-  
+  overflow: scroll;
 }
 
 .login-content {
@@ -24,9 +23,12 @@
 
 #login-text {
   /* font-size: clamp(1.5rem, 5vw, 2.625rem); */
-  font-size: 2.625rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: bold;
   font-family: var(--ff-primary);
-  font-weight: 400;
+  font-weight: var(--t3-font-weight);
+  color: var(--font-color-primary);
 }
 
 /* Login form specifications(sizing, formatting, etc)*/
@@ -39,8 +41,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid black;
 }
 
+/* Removes the red required field star from the label */
+#login-form
+  .ant-form-item-label
+  > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
+  display: none;
+}
 .login-form-item-width {
   width: 80%;
 }
@@ -51,10 +60,10 @@
 
 .login-form-item label {
   color: var(--font-color-primary) !important;
-  font-family: "Muli";
+  font-family: var(--ff-primary);
   font-weight: bold;
   /* font-size: clamp(0.75rem, 1vw, 1.125rem) !important; */
-  font-size: 1.125rem !important;
+  font-size: var(--form-label-font-size) !important;
 }
 
 .login-form-item-spacing {
@@ -118,16 +127,60 @@
   flex-basis: 30%;
 }
 
-.login-button {
-  background-color: var(--button-color-primary);
-  color: var(--font-color-secondary);
-  height: auto;
+.login-google-button {
+  width: 100%;
+  font-family: var(--ff-primary);
+  font-weight: var(--button-font-weight);
+  color: var(--font-color-primary);
+  font-size: 0.875rem;
 }
 
+.login-divider-or-text {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: bold;
+  font-family: var(--ff-primary);
+  font-weight: var(--t3-font-weight);
+  color: var(--font-color-primary);
+}
+
+.login-button {
+  font-size: 0.875rem !important;
+  background-color: var(--primary-green);
+  color: var(--font-color-primary);
+  font-family: var(--ff-primary);
+  font-weight: var(--t3-font-weight);
+
+  height: auto;
+  border: 1px solid black;
+}
+
+/* Login signup section */
+
+.login-signup-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.login-no-account-text {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: bold;
+  font-family: var(--ff-primary);
+  font-weight: var(--t3-font-weight);
+  color: var(--font-color-primary);
+}
 .signup-button {
   background-color: var(--button-color-secondary);
   color: var(--font-color-primary);
+  font-family: var(--ff-primary);
+  font-weight: var(--t3-font-weight);
+  font-size: 0.875rem !important;
   height: auto;
+  border: 1px solid black;
+  width: 100%;
 }
 
 /* Media Queries */
