--- a/src/Components/Visitors/Visitors.css
+++ b/src/Components/Visitors/Visitors.css
@@ -6,10 +6,10 @@
 
 /* Style for title of the content section */
 #visitors-title-div {
-  font-family: "Muli";
+  font-family: var(--ff-primary);
   font-weight: bold;
   font-size: 0.9375rem;
-  color: var(--font-color-secondary)
+  color: var(--font-color-secondary);
 }
 
 /* Container containing details of Visitor*/
@@ -18,12 +18,12 @@
   box-sizing: border-box;
   padding-left: 1em;
   padding-right: 1em;
+  border-radius: 1em;
 }
 #visitors-data-row-div {
   display: flex;
   justify-content: flex-end;
   flex-wrap: wrap;
-  
 }
 
 /* Single column of data row */
@@ -45,19 +45,18 @@
   align-items: center;
   justify-self: end;
   grid-column: 3 / 4;
-  
 }
 .visitors-avatar-username-text {
   padding-left: 0.5em;
-  font-family: "Muli";
-  color: var(--navbar-avatar-color-in-data);
-  font-weight: 800;
+  font-family: var(--ff-primary);
+  color: var(--visitor-details-text-color);
+  font-weight: 550;
   font-size: 0.9375rem;
 }
 
 /* Second Column which is a flex item and grid which has details of invite */
 .visitors-invite-details-column-div {
-  min-width: min(326px);
+  min-width: min(326px, 100%);
   flex-basis: 41.51%;
   flex-grow: 1;
 }
@@ -72,7 +71,7 @@
 /* Styles for invite details in the second column*/
 
 /* .visitors-invite-to-text {
-  font-family: "Muli";
+  font-family: var(--ff-primary);
   font-weight: bold;
   font-size: 1.07rem;
 } */
@@ -82,39 +81,83 @@
   align-items: center;
   justify-self: center;
   font-size: 0.9375rem;
-  font-family: "Muli";
+  font-family: var(--ff-primary);
   color: var(--font-color-secondary);
+  font-weight: var(--visitor-details-font-weight);
 }
 
 .visitors-date-time-text {
   display: flex;
-  font-family: "Muli";
+  font-family: var(--ff-primary);
   font-size: 0.798rem;
-  font-weight: bold;
+  font-weight: var(--visitor-details-font-weight);
   grid-row: 1/3;
   grid-column: 3/4;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  color: var(--font-color-secondary);
+  color: var(--visitor-details-text-color);
 }
 
 #visitors-invitees-visit-purpose-text {
   font-size: 0.9375rem;
-  font-family: "Muli";
-  color: var(--font-color-secondary);
+  font-family: var(--ff-primary);
+  font-weight: var(--visitor-details-font-weight);
+  color: var(--visitor-details-text-color);
 }
 
 #visitors-invite-to-text {
-  color: #00e18a;
-  font-family: "Muli";
+  color: var(--visitor-details-text-color);
+  font-family: var(--ff-primary);
   font-size: calc(14px + (23 - 14) * ((100vw - 300px) / (1920 - 300)));
-  font-weight: bold;
+  font-weight: 600;
+}
+
+.request-status-tabs .ant-tabs-nav-wrap {
+  width: 100% !important;
+}
+
+.request-status-tabs .ant-tabs-nav-list {
+  /* width: 100% !important; */
+  /* background-color: yellow; */
+  width: 30% !important;
+  justify-content: space-between;
+}
+.request-status-tabs .ant-tabs-tab {
+  font-family: var(--ff-primary);
+  font-size: 0.875rem !important;
+  color: var(--font-color-primary);
+  /* border-radius: 1em !important; */
+  margin-bottom: 10px !important;
+}
+
+.request-status-tabs .ant-tabs-nav-list :nth-child(1) {
+  background-color: var(--data-background-color) !important;
+  border: initial;
+  border-bottom: 2px solid yellow;
+}
+.request-status-tabs .ant-tabs-nav-list :nth-child(2) {
+  background-color: var(--data-background-color) !important;
+  border: initial;
+  border-bottom: 2px solid greenyellow;
+}
+.request-status-tabs .ant-tabs-nav-list :nth-child(3) {
+  background-color: var(--data-background-color) !important;
+  border: initial;
+  border-bottom: 2px solid red;
+}
+.request-status-tabs .ant-tabs-nav-list .ant-tabs-tab-btn {
+  background-color: initial !important;
+  border: initial !important;
+}
+
+.infinite-scroll-container {
 }
 
 /* Third Column containing buttons for accepting or rejecting requests*/
 .visitors-action-buttons-column-div {
   flex-basis: 25% !important ;
 }
+
 .visitors-action-button-container {
   display: flex;
   justify-content: space-evenly;
@@ -122,19 +165,21 @@
 
 /* Styles for action buttons in the container */
 .visitors-accept-button {
-  background-color: #00e38c;
-  color: white;
+  background-color: #66bb6a;
+  color: var(--visitor-details-text-color);
   height: initial;
-  font-family: "Muli";
-  font-weight: bold;
+  font-family: var(--ff-primary);
+  font-weight: var(--visitor-details-font-weight);
   font-size: 1.07rem;
+  border: 1px solid black;
 }
 
 .visitors-reject-button {
-  background-color: #e30000;
-  color: white;
+  background-color: #ef5350;
+  color: var(--visitor-details-text-color);
   height: initial;
-  font-family: "Muli";
-  font-weight: bold;
+  font-family: var(--ff-primary);
+  font-weight: var(--visitor-details-font-weight);
   font-size: 1.07rem;
+  border: 1px solid black;
 }
