--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,25 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 @font-face {
   font-family: "Mulish";
   src: local("Mulish"),
-    url("./Components/Resources/Fonts/Mulish/mulish-variable.ttf") format("truetype");
+    url("./Components/Resources/Fonts/Mulish/mulish-variable.ttf")
+      format("truetype");
+}
 
+@font-face {
+  font-family: "Gotham";
+  src: local("Gotham"), url("./fonts//Gotham\ Medium.otf") format("opentype");
 }
